<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/theme"
        app:iconSpaceReserved="false">

        <ListPreference
            android:defaultValue="system"
            android:entries="@array/theme_entries"
            android:entryValues="@array/theme_values"
            android:key="theme"
            android:title="@string/theme"
            app:iconSpaceReserved="false"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/notification_settings"
        app:iconSpaceReserved="false">

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="daily_reminder"
            android:title="@string/daily_reminder"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/data_management"
        app:iconSpaceReserved="false">

        <Preference
            android:key="export_data"
            android:title="@string/export_data"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/account"
        app:iconSpaceReserved="false">

        <Preference
            android:key="logout"
            android:title="@string/logout"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

</PreferenceScreen> 